# sovereign-agent-lab

./: CLAUDE.md  GRADING_OVERVIEW.md  Makefile  PROGRESS.md  README.md  pyproject.toml  smoke_test.py
exercise3_rasa/: endpoints.yml  pyproject.toml
exercise3_rasa/actions/: actions.py
memory/: MEMORY.md  project_week1_context.md
sovereign_agent/agents/: research_agent.py
sovereign_agent/tests/: test_week1.py
sovereign_agent/tools/: venue_tools.py
week1/: exercise1_context.py  exercise2_langgraph.py  exercise4_mcp_client.py  grade.py
week1/answers/: ex1_answers.py  ex2_answers.py  ex3_answers.py  ex4_answers.py
week1/outputs/: ex1_results.json  ex2_results.json  ex4_results.json
